--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -168,10 +168,6 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     needs: prepare
-    strategy:
-      fail-fast: false
-      matrix:
-        package-name: ${{ fromJson(needs.prepare.outputs.all-workspace-package-names) }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
@@ -180,7 +176,8 @@ jobs:
           node-version-file: '.nvmrc'
           cache: yarn
       - run: yarn --immutable --immutable-cache
-      - run: yarn workspace ${{ matrix.package-name }} run lint:ci
+      - name: Lint
+        run: yarn lint
       - name: Require clean working directory
         shell: bash
         run: |
