--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@metamask/auto-changelog": "^4.1.0",
     "@metamask/create-release-branch": "^4.0.0",
     "@metamask/eslint-config": "^14.0.0",
+    "@metamask/eslint-config-browser": "^14.0.0",
     "@metamask/eslint-config-jest": "^14.0.0",
     "@metamask/eslint-config-nodejs": "^14.0.0",
     "@metamask/eslint-config-typescript": "^14.0.0",
@@ -102,8 +103,6 @@
     "eslint-plugin-n": "^17.10.3",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "execa": "^5.1.1",
     "favicons": "^7.1.2",
     "geckodriver": "^4.2.0",
