--- a/packages/examples/packages/browserify-plugin/package.json
+++ b/packages/examples/packages/browserify-plugin/package.json
@@ -42,7 +42,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^"
+    "@metamask/snaps-sdk": "workspace:^",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
