--- a/packages/examples/packages/get-entropy/package.json
+++ b/packages/examples/packages/get-entropy/package.json
@@ -45,7 +45,9 @@
   "dependencies": {
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/utils": "^11.2.0",
-    "@noble/bls12-381": "^1.2.0"
+    "@noble/bls12-381": "^1.2.0",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
