--- a/packages/examples/packages/get-file/package.json
+++ b/packages/examples/packages/get-file/package.json
@@ -44,7 +44,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^"
+    "@metamask/snaps-sdk": "workspace:^",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
