--- a/packages/examples/packages/images/package.json
+++ b/packages/examples/packages/images/package.json
@@ -44,6 +44,8 @@
   },
   "dependencies": {
     "@metamask/snaps-sdk": "workspace:^",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3",
     "uqr": "^0.1.2"
   },
   "devDependencies": {
