--- a/packages/examples/packages/invoke-snap/package.json
+++ b/packages/examples/packages/invoke-snap/package.json
@@ -49,5 +49,9 @@
   },
   "engines": {
     "node": "^18.16 || >=20"
+  },
+  "dependencies": {
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   }
 }
