--- a/packages/examples/packages/invoke-snap/packages/core-signer/package.json
+++ b/packages/examples/packages/invoke-snap/packages/core-signer/package.json
@@ -47,7 +47,9 @@
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/utils": "^11.2.0",
     "@noble/curves": "^1.1.0",
-    "async-mutex": "^0.5.0"
+    "async-mutex": "^0.5.0",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
