--- a/packages/snaps-cli/package.json
+++ b/packages/snaps-cli/package.json
@@ -88,12 +88,14 @@
     "constants-browserify": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "domain-browser": "^4.22.0",
+    "eslint": "^9.11.0",
     "events": "^3.3.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "https-browserify": "^1.0.0",
     "ora": "^5.4.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "prettier": "^3.3.3",
     "process": "^0.11.10",
     "punycode": "^2.3.0",
     "querystring-es3": "^0.2.1",
