--- a/packages/snaps-controllers/package.json
+++ b/packages/snaps-controllers/package.json
@@ -98,11 +98,13 @@
     "async-mutex": "^0.5.0",
     "browserify-zlib": "^0.2.0",
     "concat-stream": "^2.0.0",
+    "eslint": "^9.11.0",
     "fast-deep-equal": "^3.1.3",
     "get-npm-tarball-url": "^2.0.3",
     "immer": "^9.0.6",
     "luxon": "^3.5.0",
     "nanoid": "^3.1.31",
+    "prettier": "^3.3.3",
     "readable-stream": "^3.6.2",
     "readable-web-to-node-stream": "^3.0.2",
     "semver": "^7.5.4",
