--- a/packages/snaps-execution-environments/package.json
+++ b/packages/snaps-execution-environments/package.json
@@ -73,7 +73,9 @@
     "@metamask/snaps-utils": "workspace:^",
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
+    "eslint": "^9.11.0",
     "nanoid": "^3.1.31",
+    "prettier": "^3.3.3",
     "readable-stream": "^3.6.2"
   },
   "devDependencies": {
