--- a/packages/snaps-jest/package.json
+++ b/packages/snaps-jest/package.json
@@ -65,9 +65,11 @@
     "@metamask/snaps-simulation": "workspace:^",
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
+    "eslint": "^9.11.0",
     "express": "^4.18.2",
     "jest-environment-node": "^29.5.0",
     "jest-matcher-utils": "^29.5.0",
+    "prettier": "^3.3.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
