--- a/packages/snaps-rollup-plugin/package.json
+++ b/packages/snaps-rollup-plugin/package.json
@@ -57,7 +57,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-utils": "workspace:^"
+    "@metamask/snaps-utils": "workspace:^",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
