--- a/packages/snaps-rpc-methods/package.json
+++ b/packages/snaps-rpc-methods/package.json
@@ -63,7 +63,9 @@
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
     "@noble/hashes": "^1.3.1",
-    "luxon": "^3.5.0"
+    "eslint": "^9.11.0",
+    "luxon": "^3.5.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
