--- a/packages/snaps-sdk/package.json
+++ b/packages/snaps-sdk/package.json
@@ -95,7 +95,9 @@
     "@metamask/providers": "^20.0.0",
     "@metamask/rpc-errors": "^7.0.2",
     "@metamask/superstruct": "^3.1.0",
-    "@metamask/utils": "^11.2.0"
+    "@metamask/utils": "^11.2.0",
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
