--- a/packages/snaps-simulation/package.json
+++ b/packages/snaps-simulation/package.json
@@ -70,8 +70,10 @@
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "eslint": "^9.11.0",
     "fast-deep-equal": "^3.1.3",
     "mime": "^3.0.0",
+    "prettier": "^3.3.3",
     "readable-stream": "^3.6.2",
     "redux-saga": "^1.2.3"
   },
