--- a/packages/snaps-simulator/package.json
+++ b/packages/snaps-simulator/package.json
@@ -63,6 +63,7 @@
     "@noble/hashes": "^1.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "date-fns": "^2.30.0",
+    "eslint": "^9.11.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^10.12.8",
     "he": "^1.2.0",
@@ -70,6 +71,7 @@
     "lodash.memoize": "^4.1.2",
     "lodash.throttle": "^4.1.1",
     "monaco-editor": "^0.38.0",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
