--- a/packages/snaps-utils/package.json
+++ b/packages/snaps-utils/package.json
@@ -92,10 +92,12 @@
     "@scure/base": "^1.1.1",
     "chalk": "^4.1.2",
     "cron-parser": "^4.5.0",
+    "eslint": "^9.11.0",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-xml-parser": "^4.4.1",
     "marked": "^12.0.1",
+    "prettier": "^3.3.3",
     "rfdc": "^1.3.0",
     "semver": "^7.5.4",
     "ses": "^1.1.0",
