--- a/packages/examples/packages/invoke-snap/package.json
+++ b/packages/examples/packages/invoke-snap/package.json
@@ -27,7 +27,7 @@
     "lint": "yarn workspaces foreach --worktree --parallel --verbose --interlaced run lint && yarn lint:dependencies",
     "lint:ci": "yarn lint:eslint && yarn lint:misc --check",
     "lint:dependencies": "depcheck",
-    "lint:eslint": "eslint . --cache --ext js,ts,jsx,tsx",
+    "lint:eslint": "eslint . --cache",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier --no-error-on-unmatched-pattern --loglevel warn \"**/*.json\" \"**/*.md\" \"**/*.html\" \"!CHANGELOG.md\" \"!snap.manifest.json\" \"!packages/**\" --ignore-path ../../../../.gitignore",
     "since-latest-release": "../../../../scripts/since-latest-release.sh",
@@ -37,6 +37,10 @@
     "test:post": "jest-it-up",
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
+  },
+  "dependencies": {
+    "eslint": "^9.11.0",
+    "prettier": "^3.3.3"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -49,9 +53,5 @@
   },
   "engines": {
     "node": "^18.16 || >=20"
-  },
-  "dependencies": {
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
   }
 }
