--- a/packages/examples/packages/bip32/package.json
+++ b/packages/examples/packages/bip32/package.json
@@ -47,9 +47,7 @@
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/utils": "^11.2.0",
     "@noble/ed25519": "^1.6.0",
-    "@noble/secp256k1": "^1.7.1",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@noble/secp256k1": "^1.7.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -62,8 +60,10 @@
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3"
   },
