--- a/packages/examples/packages/bip44/package.json
+++ b/packages/examples/packages/bip44/package.json
@@ -46,9 +46,7 @@
     "@metamask/key-tree": "^10.0.2",
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/utils": "^11.2.0",
-    "@noble/bls12-381": "^1.2.0",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@noble/bls12-381": "^1.2.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -61,8 +59,10 @@
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3"
