--- a/packages/examples/packages/browserify-plugin/package.json
+++ b/packages/examples/packages/browserify-plugin/package.json
@@ -42,9 +42,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@metamask/snaps-sdk": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
@@ -60,8 +58,10 @@
     "browserify": "^17.0.0",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3"
   },
