--- a/packages/examples/packages/invoke-snap/package.json
+++ b/packages/examples/packages/invoke-snap/package.json
@@ -38,16 +38,14 @@
     "test:verbose": "jest --verbose",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
-  },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
     "@metamask/auto-changelog": "^4.1.0",
     "@types/node": "18.14.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3"
   },
