--- a/packages/examples/packages/invoke-snap/packages/core-signer/package.json
+++ b/packages/examples/packages/invoke-snap/packages/core-signer/package.json
@@ -47,9 +47,7 @@
     "@metamask/snaps-sdk": "workspace:^",
     "@metamask/utils": "^11.2.0",
     "@noble/curves": "^1.1.0",
-    "async-mutex": "^0.5.0",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "async-mutex": "^0.5.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -63,8 +61,10 @@
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.3"
   },
