--- a/packages/examples/packages/webpack-plugin/package.json
+++ b/packages/examples/packages/webpack-plugin/package.json
@@ -43,9 +43,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-sdk": "workspace:^",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@metamask/snaps-sdk": "workspace:^"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -59,8 +57,10 @@
     "@types/webpack-env": "^1.18.1",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-node": "^10.9.1",
