--- a/packages/snaps-rollup-plugin/package.json
+++ b/packages/snaps-rollup-plugin/package.json
@@ -57,9 +57,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@metamask/snaps-utils": "workspace:^",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@metamask/snaps-utils": "workspace:^"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -71,10 +69,12 @@
     "@types/jest": "^27.5.1",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-it-up": "^2.0.0",
     "jest-silent-reporter": "^0.6.0",
     "memfs": "^3.4.13",
+    "prettier": "^3.3.3",
     "rollup": "^2.73.0",
     "typescript": "~5.3.3"
   },
