--- a/packages/snaps-rpc-methods/package.json
+++ b/packages/snaps-rpc-methods/package.json
@@ -63,9 +63,7 @@
     "@metamask/superstruct": "^3.1.0",
     "@metamask/utils": "^11.2.0",
     "@noble/hashes": "^1.3.1",
-    "eslint": "^9.11.0",
-    "luxon": "^3.5.0",
-    "prettier": "^3.3.3"
+    "luxon": "^3.5.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -78,9 +76,11 @@
     "@types/node": "18.14.2",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "jest": "^29.0.2",
     "jest-it-up": "^2.0.0",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.3.3"
   },
   "engines": {
