--- a/packages/snaps-sdk/package.json
+++ b/packages/snaps-sdk/package.json
@@ -95,9 +95,7 @@
     "@metamask/providers": "^20.0.0",
     "@metamask/rpc-errors": "^7.0.2",
     "@metamask/superstruct": "^3.1.0",
-    "@metamask/utils": "^11.2.0",
-    "eslint": "^9.11.0",
-    "prettier": "^3.3.3"
+    "@metamask/utils": "^11.2.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
@@ -106,11 +104,13 @@
     "@types/jest": "^27.5.1",
     "deepmerge": "^4.2.2",
     "depcheck": "^1.4.7",
+    "eslint": "^9.11.0",
     "expect-type": "^0.17.3",
     "jest": "^29.0.2",
     "jest-fetch-mock": "^3.0.3",
     "jest-it-up": "^2.0.0",
     "jest-silent-reporter": "^0.6.0",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "~5.3.3"
   },
