--- a/packages/examples/packages/invoke-snap/tsconfig.json
+++ b/packages/examples/packages/invoke-snap/tsconfig.json
@@ -6,9 +6,21 @@
     "module": "CommonJS",
     "moduleResolution": "Node10",
     "paths": {
-      "@metamask/snaps-sdk/jsx-dev-runtime": ["../../../../../snaps-sdk/src/jsx/jsx-dev-runtime.ts", "../../../snaps-sdk/src/jsx/jsx-dev-runtime.ts", "../snaps-sdk/src/jsx/jsx-dev-runtime.ts"],
-      "@metamask/snaps-sdk/jsx": ["../../../../../snaps-sdk/src/jsx", "../../../snaps-sdk/src/jsx", "../snaps-sdk/src/jsx"],
-      "@metamask/snaps-sdk": ["../../../../../snaps-sdk/src", "../../../snaps-sdk/src", "../snaps-sdk/src"]
+      "@metamask/snaps-sdk/jsx-dev-runtime": [
+        "../../../../../snaps-sdk/src/jsx/jsx-dev-runtime.ts",
+        "../../../snaps-sdk/src/jsx/jsx-dev-runtime.ts",
+        "../snaps-sdk/src/jsx/jsx-dev-runtime.ts"
+      ],
+      "@metamask/snaps-sdk/jsx": [
+        "../../../../../snaps-sdk/src/jsx",
+        "../../../snaps-sdk/src/jsx",
+        "../snaps-sdk/src/jsx"
+      ],
+      "@metamask/snaps-sdk": [
+        "../../../../../snaps-sdk/src",
+        "../../../snaps-sdk/src",
+        "../snaps-sdk/src"
+      ]
     }
   }
 }
