--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -189,9 +189,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs:
-      - prepare
-      - build
+    needs: prepare
     strategy:
       fail-fast: false
       matrix:
@@ -210,13 +208,6 @@ jobs:
           path: |
             packages/snaps-execution-environments/dist/browserify
           key: snaps-execution-environments-build-${{ runner.os }}-${{ matrix.node-version }}-${{ github.sha }}
-          fail-on-cache-miss: true
-      - name: Restore build files
-        uses: actions/cache@v4
-        with:
-          path: |
-            packages/*/dist
-          key: build-source-${{ runner.os }}-${{ github.sha }}
           fail-on-cache-miss: true
       - run: yarn --immutable --immutable-cache
       - name: Install Google Chrome
@@ -324,5 +315,5 @@ jobs:
           node-version-file: '.nvmrc'
           cache: yarn
       - run: yarn --immutable
-      - run: yarn build:ci
+      - run: yarn workspace @metamask/snaps-sdk run build
       - run: yarn workspace @metamask/snaps-cli run test
