Retry failing jobs in CI

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -7,6 +7,24 @@ on:
         required: true
 
 jobs:
+  test-retry:
+    name: Test retry
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run command with retries
+        uses: ./.github/actions/retry-action
+        with:
+          command: |
+            i=${$ATTEMPT:-0}
+            i=$((i + 1))
+            echo "ATTEMPT=$i" >> "$GITHUB_ENV"
+            if [[ $i -lt 3 ]]; then
+              exit 1
+            fi
+            echo "Great success!"
+          max-retries: 3
+
   prepare:
     name: Prepare
     runs-on: ubuntu-latest
