--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,11 @@ updates:
     target-branch: 'main'
     versioning-strategy: 'increase'
     open-pull-requests-limit: 10
+    groups:
+      metamask:
+        applies-to: version-updates
+        patterns:
+          - '@metamask/*'
+        update-types:
+          - 'minor'
+          - 'patch'
