Always run commit step in update PR workflow

--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -223,6 +223,7 @@ jobs:
   commit-result:
     name: Commit result
     runs-on: ubuntu-latest
+    if: ${{ !failure() && !cancelled() && needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
     needs:
       - prepare
       - dedupe-yarn-lock
