--- a/.github/workflows/update-pull-request.yml
+++ b/.github/workflows/update-pull-request.yml
@@ -225,6 +225,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ !failure() && !cancelled() && needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
     needs:
+      - is-fork-pull-request
       - prepare
       - dedupe-yarn-lock
       - regenerate-lavamoat-policies
