--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "child-workspace-package-names-as-json": "ts-node scripts/child-workspace-package-names-as-json.ts",
     "clean": "yarn workspaces foreach --all --parallel --verbose run clean",
     "get-release-tag": "ts-node --swc scripts/get-release-tag.ts",
-    "postinstall": "simple-git-hooks",
     "install-chrome": "./scripts/install-chrome.sh",
     "lint": "yarn lint:eslint && yarn lint:misc --check && yarn lint:tsconfig && yarn constraints && yarn lint:dependencies",
     "lint:dependencies": "yarn workspaces foreach --all --parallel --verbose run lint:dependencies && yarn dedupe --check",
@@ -33,6 +32,7 @@
     "lint:tsconfig": "node scripts/verify-tsconfig.mjs",
     "prepare-preview-builds": "./scripts/prepare-preview-builds.sh",
     "publish-previews": "yarn workspaces foreach --all --parallel --verbose run publish:preview",
+    "setup": "simple-git-hooks",
     "test": "yarn workspaces foreach --all --parallel --verbose run test",
     "test:browser": "yarn workspaces foreach --all --verbose run test:browser",
     "test:clean": "yarn workspaces foreach --all --parallel --verbose run test:clean",
